# mssqlclient-mcp-server

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  export-env.sh
dotnet-mcp-server/: DOTNET_BUILD_EXPLAINED.md  LICENSE  README.md  setup_test_db.sql  test_mcp.sh  test_mcp.zsh
dotnet-mcp-server/scripts/: create-version.ps1
dotnet-mcp-server/src/: cleanup-tools.bat  cleanup-tools.sh  mssqlclient.sln
dotnet-mcp-server/src/Core.Application/: Core.Application.csproj  QuerySessionManager.cs
dotnet-mcp-server/src/Core.Infrastructure.McpServer/: Core.Infrastructure.McpServer.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
dotnet-mcp-server/src/Core.Infrastructure.SqlClient/: AsyncDataReaderAdapter.cs  Core.Infrastructure.SqlClient.csproj  DatabaseContextService.cs  DatabaseService.cs  ServerDatabaseService.cs  SessionCleanupService.cs  SqlServerCapability.cs  SqlServerCapabilityDetector.cs
dotnet-mcp-server/tst/: README.md  mssqlclient-tests.sln
python-mcp-server/: .env  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_NOTES.md  MANIFEST.in  Makefile  QUICKSTART.md  README.md  SUMMARY.md  call_mcp_tool.py  docker-compose.yml  example_usage.py  pyproject.toml  pytest.ini  query_databases.py  requirements-dev.txt  requirements.txt  setup.py
python-mcp-server/mssqlclient_mcp/: __init__.py  config.py  database_service.py  formatters.py  models.py  server.py  type_mapper.py
python-mcp-server/scripts/: create_table_tutorial.sql  list_databases.py  list_tables.py  list_testdb_tables.py  test_connection.py  test_mcp_connection.py  test_passwords.py  test_startup.sh
python-mcp-server/tests/: __init__.py
specs/001-python-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+147 files in other folders)
